--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="description" content="ebird-mybird : An offline web app for browsing your personal eBird sightings">
     <link rel="stylesheet" type="text/css" media="screen" href="styles/stylesheet.css">
     <script src="scripts/offline-manager.js"></script>
+    <script src="scripts/papaparse.min.js"></script>
+    <script src="scripts/app.js"></script>
   </head>
 
   <body>
