--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <p>An offline web app for browsing your personal eBird sightings</p>
+
+        <div id='results'>
       </section>
     </div>
 
