--- a/app/index.html
+++ b/app/index.html
@@ -16,15 +16,13 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
           <h1 id="project_title">ebird-mybird</h1>
-          <h2 id="project_tagline">Template App</h2>
+          <h2 id="project_tagline">A personal website for your eBird data</h2>
         </header>
     </div>
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p>An offline web app for browsing your personal eBird sightings</p>
-
         <div id='results'>
       </section>
     </div>
