--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html>
-
   <head>
     <meta charset="utf-8">
+
     <title>ebird-mybird</title>
+
     <meta name="description" content="ebird-mybird : An offline web app for browsing your personal eBird sightings">
+
     <link rel="stylesheet" type="text/css" media="screen" href="styles/stylesheet.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="styles/app.css">
+
     <script src="scripts/offline-manager.js"></script>
     <script src="scripts/papaparse.min.js"></script>
     <script src="scripts/app.js"></script>
+    <script src="scripts/handlebars-v4.0.4.js"></script>
   </head>
 
   <body>
@@ -23,7 +28,31 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
+        <a data-hash="trips" href="#trips">trips</a>
+        <a data-hash="locations" href="#locations">locations</a>
         <div id='results'>
+      </section>
+
+      <section id="locations" class="hidden card inner">
+        <div id='locations-template' class='hidden'>
+          <h3>{{locations.length}} locations</h3>
+          {{#each locations}}
+            <div><a href="#location?name={{this}}">{{this}}</a></div>
+          {{/each}}
+        </div>
+        <div id='locations-results' class='inner'>
+        </div>
+      </section>
+
+      <section id="trips" class="hidden card inner">
+        <div id='trips-template' class='hidden'>
+          <h3>{{trips.length}} trips</h3>
+          {{#each trips}}
+            <div><a href="#trip?date={{this}}">{{this}}</a></div>
+          {{/each}}
+        </div>
+        <div id='trips-results' class='inner'>
+        </div>
       </section>
     </div>
 
