--- a/index.html
+++ b/index.html
@@ -14,44 +14,125 @@
     <script src="scripts/papaparse.min.js"></script>
     <script src="scripts/app.js"></script>
     <script src="scripts/handlebars-v4.0.4.js"></script>
+
+    <script id="home-template" type="x-handlebars-template">
+      <h3>{{owner}}'s eBird</h3>
+      <div>{{earliest.DateObject}} - {{latest.DateObject}}</div>
+      {{numSightings}} sightings, {{numChecklists}} checklists
+    </script>
+
+    <script id="taxons-template" type="x-handlebars-template">
+      <h3>{{taxons.length}} species</h3>
+      {{#each taxons}}
+        <div><a href="#taxon/{{this}}">{{this}}</a></div>
+      {{/each}}
+    </script>
+
+    <script id="taxon-template" type="x-handlebars-template">
+      <h3>{{name}}</h3>
+      <div>{{sightings.length}} sightings</div>
+      {{#each sightings}}
+        <div>
+          <a href="#trip/{{this.Date}}">{{this.Date}}</a>
+          <a href="#location/{{this.Location}}">{{this.Location}}</a>
+        </div>
+      {{/each}}
+    </script>
+
+    <script id="locations-template" type="x-handlebars-template">
+      <h3>{{locations.length}} locations</h3>
+      {{#each locations}}
+        <div><a href="#location/{{this}}">{{this}}</a></div>
+      {{/each}}
+    </script>
+
+    <script id="location-template" type="x-handlebars-template">
+      <h3>{{name}}</h3>
+      <div>{{taxons.length}} species</div>
+      {{#each taxons}}
+        <div>
+          <a href="#taxon/{{this}}">{{this}}</a>
+        </div>
+      {{/each}}
+    </script>
+
+    <script id="trips-template" type="x-handlebars-template">
+      <h3>{{trips.length}} trips</h3>
+      {{#each trips}}
+        <div><a href="#trip/{{this}}">{{this}}</a></div>
+      {{/each}}
+    </script>
+
+    <script id="trip-template" type="x-handlebars-template">
+      <h3>{{name}}</h3>
+
+      {{#each comments}}
+        <div style='font-style: italic'>{{this}}</div>
+      {{/each}}
+
+      {{#each submissions}}
+        <div><a target='_blank' href='http://ebird.org/ebird/view/checklist?subID={{this}}'>{{this}}</a></div>
+      {{/each}}
+
+      <div>{{sightings.length}} sightings</div>
+      {{#each sightings}}
+        <div>
+          <a href='#location/{{this.Location}}'>{{this.Location}}</a>
+          <a href='#taxon/{{[Common Name]}}'>{{[Common Name]}}</a>
+        </div>
+      {{/each}}
+    </script>
   </head>
 
   <body>
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <h1 id="project_title">ebird-mybird</h1>
-          <h2 id="project_tagline">A personal website for your eBird data</h2>
+          <span id="project_title">ebird-mybird</span>
+          <span id="project_tagline"> | A personal website for your eBird data</span>
+          <div>
+            <a data-hash="trips" href="#trips">trips</a>
+            <a data-hash="locations" href="#locations">locations</a>
+            <a data-hash="taxons" href="#taxons">species</a>
+            <a data-hash="home" href="#home">home</a>
+        </div>
         </header>
     </div>
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <a data-hash="trips" href="#trips">trips</a>
-        <a data-hash="locations" href="#locations">locations</a>
-        <div id='results'>
+      <section id="home" class="hidden card inner">
+        <div id='home-results' class='inner'>
+        </div>
       </section>
 
       <section id="locations" class="hidden card inner">
-        <div id='locations-template' class='hidden'>
-          <h3>{{locations.length}} locations</h3>
-          {{#each locations}}
-            <div><a href="#location?name={{this}}">{{this}}</a></div>
-          {{/each}}
-        </div>
         <div id='locations-results' class='inner'>
         </div>
       </section>
 
-      <section id="trips" class="hidden card inner">
-        <div id='trips-template' class='hidden'>
-          <h3>{{trips.length}} trips</h3>
-          {{#each trips}}
-            <div><a href="#trip?date={{this}}">{{this}}</a></div>
-          {{/each}}
+      <section id="location" class="hidden card inner">
+        <div id='location-results' class='inner'>
         </div>
+      </section>
+
+      <section id="trips" class="hidden card inner">
         <div id='trips-results' class='inner'>
+        </div>
+      </section>
+
+      <section id="trip" class="hidden card inner">
+        <div id='trip-results' class='inner'>
+        </div>
+      </section>
+
+      <section id="taxons" class="hidden card inner">
+        <div id='taxons-results' class='inner'>
+        </div>
+      </section>
+
+      <section id="taxon" class="hidden card inner">
+        <div id='taxon-results' class='inner'>
         </div>
       </section>
     </div>
