--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,7 @@
     </script>
 
     <script id="location-template" type="x-handlebars-template">
-      <h3>{{name}}</h3>
+      <h3>{{name}}, {{county}}, {{state}}</h3>
       <div>{{taxons.length}} species</div>
       {{#each taxons}}
         <div>
