--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
     </script>
 
     <script id="taxon-template" type="x-handlebars-template">
-      <h3>{{name}}</h3>
+      <h3>{{name}} ({{scientificName}})</h3>
       <div>{{sightings.length}} sightings</div>
       {{#each sightings}}
         <div>
