--- a/app/index.html
+++ b/app/index.html
@@ -16,9 +16,15 @@
     <script src="scripts/handlebars-v4.0.4.js"></script>
 
     <script id="home-template" type="x-handlebars-template">
-      <h3>{{owner}}'s eBird</h3>
-      <div>{{earliest.DateObject}} - {{latest.DateObject}}</div>
-      {{numSightings}} sightings, {{numChecklists}} checklists
+      <h3>{{owner}}&apos;s eBird</h3>
+      <div>
+        {{nicenumber numSightings}} sightings in {{nicenumber numChecklists}} checklists
+        from {{nicedate earliest.DateObject}} - {{nicedate latest.DateObject}}
+      </div>
+      info graphic here
+      {{#each sightingsByYear}}
+        <div>Key: {{@key}} Value = {{this.length}}</div>
+      {{/each}}
     </script>
 
     <script id="taxons-template" type="x-handlebars-template">
@@ -48,7 +54,7 @@
 
     <script id="location-template" type="x-handlebars-template">
       <h3>{{name}}, {{county}}, {{state}}</h3>
-      <div>{{taxons.length}} species</div>
+      <div>{{taxons.length}} species on {{dates.length}} dates</div>
       {{#each taxons}}
         <div>
           <a href="#taxon/{{this}}">{{this}}</a>
