--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
         from {{nicedate earliest.DateObject}} - {{nicedate latest.DateObject}}
       </div>
 
-      <div id='byYearChartContainer' style='height: 500px; width: 100%;'></div>
+      <div id='byYearChartContainer' style='padding-top: 10px; height: 500px; width: 100%;'></div>
     </script>
 
     <script id="chrono-template" type="x-handlebars-template">
