correct formatting of custom day list

--- a/app/index.html
+++ b/app/index.html
@@ -82,7 +82,7 @@
     </script>
 
     <script id="trip-template" type="x-handlebars-template">
-      <h3>{{name}}</h3>
+      <h3>{{name}} {{customName}}</h3>
 
       {{#each comments}}
         <div style='font-style: italic'>{{this}}</div>
