--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <link rel="shortcut icon" href="./images/ebird-favicon.ico">
 
     <link rel="stylesheet" type="text/css" media="screen" href="styles/stylesheet.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="styles/c3.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="styles/app.css">
 
-    <script src="scripts/canvasjs.min.js"></script>
+    <script src="scripts/d3.v3.min.js" charset="utf-8"></script>
+    <script src="scripts/c3.min.js"></script>
     <script src="scripts/offline-manager.js"></script>
     <script src="scripts/papaparse.min.js"></script>
     <script src="scripts/app.js"></script>
@@ -27,7 +29,7 @@
         from {{nicedate earliest.DateObject}} - {{nicedate latest.DateObject}}
       </div>
 
-      <div id='byYearChartContainer' style='padding-top: 10px; height: 500px; width: 100%;'></div>
+      <div id='byYearChartContainer' style='padding-top: 10px'></div>
     </script>
 
     <script id="chrono-template" type="x-handlebars-template">
@@ -74,13 +76,14 @@
 
     <script id="trips-template" type="x-handlebars-template">
       <h3>{{trips.length}} trips</h3>
+
       {{#each trips}}
-        <div><a href="#trip/{{this}}">{{this}}</a></div>
+        <div><a href="#trip/{{this}}">{{this}}</a> {{lookup ../customDayNames this}}</div>
       {{/each}}
     </script>
 
     <script id="trip-template" type="x-handlebars-template">
-      <h3>{{name}}</h3>
+      <h3>{{name}} {{customName}}</h3>
 
       {{#each comments}}
         <div style='font-style: italic'>{{this}}</div>
@@ -162,7 +165,8 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Bootstrapped with <a href="https://github.com/mozilla/oghliner/">oghliner</a>.
+        <p class="copyright">Bootstrapped with <a target="_blank_" href="https://github.com/mozilla/oghliner/">oghliner</a>.</p>
+        <p class="copyright">Check out <a target="_blank_" href="https://github.com/wfwalker/ebird-mybird">the source code on github</a>
       </footer>
     </div>
   </body>
