be smarter about calling getUniqueValues and finding earliest and latest sightings

--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
 
       <div>
         {{nicenumber numSightings}} sightings in {{nicenumber numChecklists}} checklists
-        from {{nicedate earliest.DateObject}} - {{nicedate latest.DateObject}}
+        from {{nicedate earliest}} - {{nicedate latest}}
       </div>
 
       <div id={{chartID}} style='padding-top: 10px'></div>
