--- a/app/index.html
+++ b/app/index.html
@@ -169,6 +169,7 @@
     </div>
   </body>
 
+  <script src="scripts/date.js" charset="utf-8"></script>
   <script src="scripts/d3.v3.min.js" charset="utf-8"></script>
   <script src="scripts/c3.min.js"></script>
   <script src="scripts/offline-manager.js"></script>
