--- a/index.html
+++ b/index.html
@@ -169,10 +169,11 @@
     </div>
   </body>
 
-  <script src="scripts/d3.v3.min.js" charset="utf-8" defer></script>
-  <script src="scripts/c3.min.js" defer></script>
-  <script src="scripts/offline-manager.js" defer></script>
-  <script src="scripts/papaparse.min.js" defer></script>
-  <script src="scripts/handlebars-v4.0.4.js" defer></script>
-  <script src="scripts/app.js" defer></script>
+  <script src="scripts/date.js" charset="utf-8"></script>
+  <script src="scripts/d3.v3.min.js" charset="utf-8"></script>
+  <script src="scripts/c3.min.js"></script>
+  <script src="scripts/offline-manager.js"></script>
+  <script src="scripts/papaparse.min.js"></script>
+  <script src="scripts/handlebars-v4.0.4.js"></script>
+  <script src="scripts/app.js"></script>
 </html>
