add loading message

--- a/app/index.html
+++ b/app/index.html
@@ -119,6 +119,10 @@
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
+      <section id="loading" class="card inner">
+        <center>loading</center>
+      </section>
+
       <section id="home" class="hidden card inner">
         <div id='home-results' class='inner'>
         </div>
