--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </script>
 
     <script id="taxon-template" type="x-handlebars-template">
-      <h3>{{name}} ({{scientificName}})</h3>
+      <h3>{{name}} <span style='font-weight: lighter'>| {{scientificName}}<span></h3>
       <div>{{sightings.length}} sightings</div>
       {{#each sightings}}
         <div>
@@ -60,7 +60,7 @@
     </script>
 
     <script id="location-template" type="x-handlebars-template">
-      <h3>{{name}}, {{county}}, {{state}}</h3>
+      <h3>{{name}} <span style='font-weight: lighter'>| {{county}}, {{state}}<span></h3>
       <div><a target="_blank" href="https://www.openstreetmap.org/?mlat={{latitude}}&mlon={{longitude}}#map=10/{{latitude}}/{{longitude}}">{{latitude}},{{longitude}}</a></div>
 
       <div>{{taxons.length}} species on {{dates.length}} dates</div>
@@ -80,8 +80,18 @@
       {{/each}}
     </script>
 
+    <script id="year-template" type="x-handlebars-template">
+      <h3>{{year}}</h3>
+
+      <div>{{yearSightings.length}} sightings, {{yearSpecies.length}} species</div>
+
+      {{#each yearSpecies}}
+        <div><a href="#taxon/{{this}}">{{this}}</a></div>
+      {{/each}}
+    </script>
+
     <script id="trip-template" type="x-handlebars-template">
-      <h3>{{name}} {{customName}}</h3>
+      <h3>{{nicedate tripDate}} <span style='font-weight: lighter'>| {{customName}}</span></h3>
 
       {{#each comments}}
         <div style='font-style: italic'>{{this}}</div>
@@ -145,6 +155,11 @@
 
       <section id="trip" class="hidden card inner">
         <div id='trip-results' class='inner'>
+        </div>
+      </section>
+
+      <section id="year" class="hidden card inner">
+        <div id='year-results' class='inner'>
         </div>
       </section>
 
