split out sighting list into separate file NOTE: adding inefficiences here

--- a/app/index.html
+++ b/app/index.html
@@ -199,5 +199,6 @@
   <script src="scripts/c3.min.js"></script>
   <script src="scripts/papaparse.min.js"></script>
   <script src="scripts/handlebars-v4.0.4.js"></script>
+  <script src="scripts/sightinglist.js"></script>
   <script src="scripts/app.js"></script>
 </html>
