--- a/index.html
+++ b/index.html
@@ -69,7 +69,13 @@
       <h3>{{name}} <span style='font-weight: lighter'>| {{county}}, {{state}}<span></h3>
       <div><a target="_blank" href="https://www.openstreetmap.org/?mlat={{latitude}}&mlon={{longitude}}#map=10/{{latitude}}/{{longitude}}">{{latitude}},{{longitude}}</a></div>
 
-      <div>{{taxons.length}} species on {{dates.length}} dates</div>
+      <div>
+      {{#each photos}}
+        <span><img src="{{this.thumbURL}}"></span>
+      {{/each}}
+      </div>
+
+      <div>{{taxons.length}} species on {{dateObjects.length}} dates</div>
 
       {{#each taxons}}
         <div>
@@ -82,7 +88,7 @@
       <h3>{{trips.length}} trips</h3>
 
       {{#each trips}}
-        <div><a href="#trip/{{this}}">{{this}}</a> {{lookup ../customDayNames this}}</div>
+        <div><a href="#trip/{{ebirddate this}}">{{nicedate this}}</a> {{lookup ../customDayNames (ebirddate this)}}</div>
       {{/each}}
     </script>
 
@@ -101,6 +107,10 @@
 
       {{#each comments}}
         <div style='font-style: italic'>{{this}}</div>
+      {{/each}}
+
+      {{#each photos}}
+        <div><img src="{{this.thumbURL}}"></div>
       {{/each}}
 
       {{#each submissions}}
@@ -199,5 +209,6 @@
   <script src="scripts/c3.min.js"></script>
   <script src="scripts/papaparse.min.js"></script>
   <script src="scripts/handlebars-v4.0.4.js"></script>
+  <script src="scripts/sightinglist.js"></script>
   <script src="scripts/app.js"></script>
 </html>
