--- a/app/index.html
+++ b/app/index.html
@@ -68,12 +68,15 @@
     <script id="location-template" type="x-handlebars-template">
       <h3>{{name}} <span style='font-weight: lighter'>| {{county}}, {{state}}<span></h3>
       <div><a target="_blank" href="https://www.openstreetmap.org/?mlat={{latitude}}&mlon={{longitude}}#map=10/{{latitude}}/{{longitude}}">{{latitude}},{{longitude}}</a></div>
-
       <div>
       {{#each photos}}
         <span><img src="{{this.thumbURL}}"></span>
       {{/each}}
       </div>
+
+      <div id={{chartID}} style='padding-top: 10px'></div>
+
+      {{monthgraph sightingsByMonth chartID}}
 
       <div>{{taxons.length}} species on {{dateObjects.length}} dates</div>
 
